; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-umount.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-umount.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"/test-umount/empty.mountinfo\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"/test-umount/garbled.mountinfo\00", align 1
@.str.2 = private unnamed_addr constant [37 x i8] c"/test-umount/rhbug-1554943.mountinfo\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"/test-umount/example.swaps\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %5 = load i32, i32* @LOG_DEBUG, align 4
  %6 = call i32 @test_setup_logging(i32 %5)
  %7 = call i32 @test_mount_points_list(i8* null)
  %8 = call i32 @test_mount_points_list(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @test_mount_points_list(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  %10 = call i32 @test_mount_points_list(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0))
  %11 = call i32 @test_swap_list(i8* null)
  %12 = call i32 @test_swap_list(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @test_mount_points_list(i8*) #1

declare dso_local i32 @test_swap_list(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
